lock optimization and memorylayout and escape analysis